--- a/LabBook.org
+++ b/LabBook.org
@@ -1256,7 +1256,7 @@ toClear
 execute
 #+end_src
 
-* 2016-08-10 Attempt to understand scorep hardware counters metrics
+* 2016-08-10 Attempt to understand scorep hardware counters metrics   :Lucas:
 
 #+begin_src sh :results output
 otf2-print scorep-20160810_1601_8543111267115196/traces.otf2 | grep METRIC | awk '{ print "Thread", "Timestamp", $8, $12, $16 }' | tr -d '(\"' | sed "s/ /,/g" | head -n1 > x.csv
@@ -1269,6 +1269,7 @@ df$Timestamp <- df$Timestamp - min(df$Timestamp); #obtain a zero
 df$Timestamp <- df$Timestamp/1000000000; #in seconds now
 library(reshape);
 df <- melt(df, id=c("Thread", "Timestamp"));
+
 head(df);
 #+end_src
 
@@ -1281,13 +1282,13 @@ head(df);
 : 5          0  1.466844 PAPI_L2_DCH 179357
 : 6 8589934592  1.493765 PAPI_L2_DCH    121
 
-#+begin_src R :results output graphics :file (org-babel-temp-file "figure" ".png") :exports both :width 1200 :height 800 :session
+#+begin_src R :results output graphics :file "imagens/analiseProfLucas.png" :exports both :width 1200 :height 800 :session
 library(ggplot2);
 ggplot(df, aes(x=Timestamp, y=value, color=variable)) + geom_line() + theme_bw() + facet_grid(Thread~variable);
 #+end_src
 
 #+RESULTS:
-[[file:/tmp/babel-24178Tyx/figure24178HZf.png]]
+[[file:imagens/analiseProfLucas.png]]
 
 Data is clearly missing. There is no measurements from timestamp 0 to
 more than 200s. It might be some issue related to tracing. Let's check
@@ -1324,3 +1325,75 @@ We should get a much finer granularity when measuring. I believe
 scorep is only measuring the metrics when something is actually traced
 (from the application level). That's very bad, since in the meantime
 (from 2.228974 to 240.032126) we got nothing.
+* [23:58:15; 10.08.2016] Script protótipo para coletar em diferentes time stamps usando abordagem manual com Intel PCM
+
+- O script deve inicializar o programa-alvo, em X interações deverá
+  coletar os hardwares counters específicos para gerar o rastro de
+  execução. Essas interações terão como condição de parada o término
+  do processo, o time stamp será definido de acordo com o tempo gasto
+  pela aplicação como um todo, por isso deverá ser informado por
+  parâmetro.
+
+
+#+begin_src sh :results output :exports both :tangle dados/scriptPCMexp1.bash
+
+pathOfIntelPCM=/home/aulapinroot/Programs/IntelPerformanceCounterMonitor-V2.11
+
+app=tiling_par
+
+size=5000
+
+flag=0
+
+timeOfCollet=0.002 #em segundos
+timeAcc=0.0
+
+#disparando a aplicação alvo
+./$app $size &
+
+
+#rastro
+echo "TimeStamp,L3miss,L2miss,L3hit,L2hit" >> Results.csv
+
+while [ flag == 0 ]; do
+
+	#recuperando o estado do processo para ver se o mesmo está executando
+	stateOfProcess=$(ps ux | grep -i $app | head -1 | awk ' { print $8 } '
+
+	#pegar a quantidade de Rs nesse fluxo de caracteres
+	amountOfR=$(echo $stateOfProcess | grep R | wc -l | bc)	
+
+	#se existir um R, então o processo está execuntando
+	if [ $amountOfR == 1 ]; then
+		flag=0;
+	else
+	    	flag=1;
+	fi
+
+	#aqui executo algum processo leve
+	sudo -E $pathOfIntelPCM/pcm.x --noJKTWA -r --external-program clean >> tmp.log
+
+	l3miss=$(cat tmp.log | grep -i "TOTAL *" | head -1 | awk ' { print $7,$8 } ')
+	l3miss=$(echo $l3miss | sed -e 's/[[:space:]]K/*1024/g')
+	l3miss=$(echo $l3miss | sed -e 's/[[:space:]]M/*1024*1024/g')
+	l3miss=$(echo $l3miss | sed -e 's/[[:space:]]G/*1024*1024*1024/g')
+	l3miss=$(echo $l3miss | bc)
+
+	l2miss=$(cat tmp.log | grep -i "TOTAL *" | head -1 | awk ' { print $9,$10 } ')
+	l2miss=$(echo $l2miss | sed -e 's/[[:space:]]K/*1024/g')
+	l2miss=$(echo $l2miss | sed -e 's/[[:space:]]M/*1024*1024/g')
+	l2miss=$(echo $l2miss | sed -e 's/[[:space:]]G/*1024*1024*1024/g')
+	l2miss=$(echo $l2miss | bc)
+
+	l3hit=$(cat tmp.log | grep -i "TOTAL *" | head -1 | awk ' { print $11 } ')
+	l2hit=$(cat tmp.log | grep -i "TOTAL *" | head -1 | awk ' { print $12 } ')
+
+	echo "$timeAcc,$l3miss,$l2miss,$l3hit,$l2hit" >> Results.csv
+
+	sleep $timeOfCollet
+
+	let timeAcc=$timeAcc+$timeOfCollet
+
+done
+
+#+end_src
