--- a/LabBook.org
+++ b/LabBook.org
@@ -1831,15 +1831,11 @@ sudo likwid-perfctr -E L2 | head -1
 Found 45 event(s) with search key L2:
 #+end_example
 
-- Outro fator pode ser a frequência, como o tempo total de execução da
-  aplicação foi aproximadamente de 2 segundos e o tempo de cada
-  amostragem foi realizado de acordo com o intervalo de 20ms (o que
-  representa 0,02 segundos), corresponderia a =100 medidas= e pelos valores
-  apresentarem o mesmo tipo, essa alternativa também não explica
-  rastro gerado. Só que assim, a coleta está sendo realizada apenas 
-  para determinado evento, o qual temos que descobrir. A baixo estou
-  apresentando o cabeçalho do trace e além dele mais duas linhas, para
-  tentar compreender o que está acontecendo.
+- O tempo total de execução da aplicação foi aproximadamente de 2 segundos e o tempo
+  de cada amostragem foi realizado de acordo com o intervalo de 20ms
+  (o que representa 0,02 segundos), corresponderia a =100 medidas= e
+  pelos valores apresentarem o mesmo tipo, essa alternativa também
+  não explica rastro gerado.
 
 #+begin_src sh :results output :exports both
 cat saida2.csv | head -4
@@ -1853,7 +1849,7 @@ cat saida2.csv | head -4
 #+end_example
 
 
-- Caso o meu raciocínio estiver certo, então as medidas para o =core 0=
+- Na minha visão, as medidas atribuídas ao =core 0=
   são:
 
 #+begin_src sh :results output :exports both
