--- a/LabBook.org
+++ b/LabBook.org
@@ -2273,4 +2273,42 @@ drwxrwxr-x 2 aulapinroot aulapinroot 4,0K Ago 13 10:42 .
   algumas aplicações, o que o senhor acha professor?
 
 
+* [12:59:49; 13.08.2016] Experimento com o benchmark NAS            :Gabriel:
 
+** Instalação do benchmark NAS
+
+#+begin_src sh :results output :exports both
+cd $HOME/Programs/
+wget http://www.nas.nasa.gov/assets/npb/NPB3.3.1.tar.gz
+tar vxf NPB3.3.1.tar.gz
+cd NPB3.3.1/NPB3.3-OMP/config
+cp make.def.template make.def
+cp suit.def.template suit.def
+#+end_src
+
+- Após isso nos arquivos make.def deve ser definido o compilador c e
+  fortran utilizado, como também a flag =openmp=. No suite.def deve ser
+  definido a classe do algoritmo a ser compilado.
+
+** Definições iniciais
+
+- Primeiramente vou fazer um teste para ver mais ou menos o tempo de
+  execução para cada algoritmo, usando =32 threads= (default openmp da
+  máquina). 
+
+|-----------+--------------+----------------+--------------|
+| Aplicação | Execução (s) | TimeStamp (ms) | Amostras     |
+|-----------+--------------+----------------+--------------|
+| bt.B      |        37.56 | 100ms          | ~= 37        |
+| cg.B      |        18.13 | 50ms           | ~= 36        |
+| ep.B      |         3.52 | - Descartado   | - Descartado |
+| ft.B      |         8.35 | 30ms           | ~= 27        |
+| lu.B      |        34.08 | 100ms          | ~= 34        |
+| mg.B      |          3.6 | - Descartado   | - Descartado |
+| sp.B      |        83.85 | 225ms          | ~= 37        |
+| ua.B      |        40.90 | 110ms          | ~= 37        |
+|-----------+--------------+----------------+--------------|
+
+- Na coluna =TimeStamp= e =Amostras= estou propondo uma configuração
+  adequada para deixar próximo a quantidade de amostras de acordo com
+  o tempo de execução de cada aplicação.
