--- a/LabBook.org
+++ b/LabBook.org
@@ -2204,7 +2204,6 @@ others
 README
 #+end_example
 
-
 * [01:13:21; 13.08.2016] Experimento com o benchmark Rodinia        :Gabriel:
 
 - Defini o seguinte script para executar algumas aplicações que
@@ -2272,9 +2271,7 @@ drwxrwxr-x 2 aulapinroot aulapinroot 4,0K Ago 13 10:42 .
   com o tempo apertado vou executar o benchmark do =NAS=, focando em
   algumas aplicações, o que o senhor acha professor?
 
-
 * [12:59:49; 13.08.2016] Experimento com o benchmark NAS            :Gabriel:
-
 ** Instalação do benchmark NAS
 
 #+begin_src sh :results output :exports both
@@ -2311,4 +2308,10 @@ cp suit.def.template suit.def
 
 - Na coluna =TimeStamp= e =Amostras= estou propondo uma configuração
   adequada para deixar próximo a quantidade de amostras de acordo com
-  o tempo de execução de cada aplicação.
+  o tempo de execução de cada aplicação. O motivo de descartar algumas
+  aplicações para o experimento é devido ao seu tempo de execução ser
+  inferior a 4 segundos, isso porque na medida que eu defnir um
+  =TimeStamp= muito pequeno para coletar as amostras, isso pode afetar
+  os valores coletados. A maneira que encontro hoje de evitar isso é
+  descartando essas aplicações, mas pretendo investigar como resolver
+  tal problemática.
